--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
  </head>
  <body>
     <header>
-
+        <div class="header-top"></div>
+        <div class="header-bottom"></div>
     </header>
 
         <main>
