--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Secondo Layout con Float</title>
+     <title>Layout con Float</title>
      <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
@@ -13,7 +13,14 @@
         <div class="header-bottom"></div>
     </header>
 
-        <main>
+        <main class="debug-main">
+            <div class="main-top"></div>
+            <div class="section-box clearfix debug">
+                <aside class="boxl left"> </aside>
+                <aside class="boxc left"> </aside>
+                <aside class="boxr left"> </aside>
+            </div>
+            
 
         </main>
 
