ordine pagina + commenti

--- a/index.html
+++ b/index.html
@@ -8,25 +8,38 @@
      <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
+
+    <!-- inzio header -->
+
     <header>
         <div class="header-top"></div>
         <div class="header-bottom"></div>
     </header>
 
-        <main class="debug-main">
-            <div class="main-top"></div>
+    <!-- /header -->
+
+    <!-- inizio main -->
+
+    <main class="debug-main">
+        <div class="main-top"></div>
             <div class="section-box clearfix debug">
                 <aside class="boxl left"> </aside>
                 <aside class="boxc left"> </aside>
                 <aside class="boxr left"> </aside>
             </div>
-            
+    </main>
 
-        </main>
+    <!-- /main -->
+
+    <!-- inizio footer -->
 
     <footer>
 
     </footer>
+
+    <!-- /footer -->
+
+
 
  </body>
  </html>
